# MST

./: CMakeLists.txt  edge.cpp  edge.h  generate.cpp  generate.h  in.txt  k_mst.cpp  k_mst.h  main.cpp  mst.cpp  mst.h
data/testcase1/: output2(check).txt
data/testcase2/: output1.txt
data/testcase4/: output1.txt  output2(check).txt
data/testcase5/: output1.txt  output2(check).txt
testcase1/: output1.txt
testcase2/: output2(check).txt
testcase3/: output1.txt  output2(check).txt
testcase5/: testcase.txt
